--- a/test_0_latest.ipynb
+++ b/test_0_latest.ipynb
@@ -24,11 +24,11 @@
     "   - A histogram of log returns is plotted alongside its estimated density to visualize the distribution.  \n",
     "   - **Key Insight**: The distribution of log returns is closer to a t-distribution, showing positive skewness and fatter tails compared to a normal distribution.\n",
     "\n",
-    "### 4. **Stationarity Test (KPSS)**  \n",
+    "### 4. **Stationarity Test**  \n",
     "   - Performs the KPSS test to evaluate whether the log return series is stationary.  \n",
     "   - Helps ensure that statistical models applied to the data are appropriate.\n",
     "\n",
-    "### 5. **GARCH Model**  \n",
+    "### 5. **GARCH Model Optimization**  \n",
     "   - **Creating Pairs of (p, q) Parameters**:  \n",
     "     - Selects \\( p \\) and \\( q \\) parameters for the GARCH model.  \n",
     "   - **Function for Optimizing GARCH Parameters**:  \n",
@@ -37,7 +37,7 @@
     "### 6. **Fitting the Optimized GARCH Model**  \n",
     "   - Applies the optimized GARCH model to the log returns to analyze and model volatility.\n",
     "\n",
-    "### 7. **Deriving Coefficients**  \n",
+    "### 7. **Assessing Coefficients of the Model**  \n",
     "   - Extracts and analyzes coefficients from the GARCH model summary to assess their statistical significance.  \n",
     "\n",
     "### 8. **Residual Analysis**  \n",
@@ -51,7 +51,7 @@
     "\n",
     "### 10. **Visualization of Model Fit**  \n",
     "   - Visualizes the GARCH model's fit to the data.  \n",
-    "   - Includes visualizations for both the entire dataset and specific subsets.\n",
+    "   - Includes visualizations for both the entire dataset and a subset.\n",
     "\n",
     "### 11. **References**  \n",
     "   - [Python for Finance Cookbook (2nd Edition)](https://github.com/PacktPublishing/Python-for-Finance-Cookbook-2E)  \n",
