--- a/part_1.ipynb
+++ b/part_1.ipynb
@@ -55,7 +55,7 @@
     "   - Includes visualizations for both the entire dataset and a subset.\n",
     "\n",
     "## 12. References\n",
-    "   - [Python for Finance Cookbook (2nd Edition)](https://github.com/PacktPublishing/Python-for-Finance-Cookbook-2E)  \n",
+    "   - Python for Finance Cookbook (2nd Edition)  \n",
     "   - Various other sources, including GitHub related to financial time series forecasting.\n",
     "\n",
     "##\n"
